sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:11: error: ambiguous reference to overloaded definition,
both method * in class Int of type (x: Char)Int
and  method * in class Int of type (x: Byte)Int
match expected type ?
      i*ecart=i*ecart+1
       ^