sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  var lgr = getNombreValeurs()
  var ecart = lgr/2
  while(ecart>0){
  for (i <- 1 to lgr-1){
    var diffcase = 1
    var v = getValeur(i)
    while(i-i*ecart >= 0 && v<getValeur(i-i*ecart)){  
      setValeur(i-i*ecart+1,getValeur(i-i*ecart))
      i*ecart=i*ecart+1
    }
    setValeur(i-i*ecart+1,v)
  }
}

  }
    